--- a/src/GUI/Frame_DataBarang.form
+++ b/src/GUI/Frame_DataBarang.form
@@ -137,6 +137,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="inp_id">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inp_idActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="120" y="50" width="131" height="-1"/>
